hphp/test/zend/good/ext/dom/tests/DOMNode_getNodePath_basic.php
<?php
$file = dirname(__FILE__).'/book.xml';
$doc = new DOMDocument();
$doc->load($file);
$nodes = $doc->getElementsByTagName('title');
foreach($nodes as $node) {
	var_dump($node->getNodePath());
}
?>
